Do an AAA final task

--- a/decorators_hw/decorators_hw.ipynb
+++ b/decorators_hw/decorators_hw.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,8 +108,8 @@
     "original_write = sys.stdout.write\n",
     "\n",
     "def my_write(string_text):\n",
-    "    if string_text == '\\n':\n",
-    "        return original_write('\\n')\n",
+    "    #if string_text == '\\n':\n",
+    "        #return original_write('\\n')\n",
     "    return original_write(f'[{datetime.datetime.now()}]: {string_text}')\n",
     "\n",
     "\n",
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-20 00:27:52.174189]: 1, 2, 3\n"
+      "[2022-11-21 13:45:25.220415]: 1, 2, 3[2022-11-21 13:45:25.220447]: \n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-20 00:28:01.202191]: Hello, Nikita!\n"
+      "[2022-11-21 13:46:00.003965]: Hello, Nikita!\n"
      ]
     }
    ],
@@ -276,6 +276,14 @@
    "source": [
     "%cat function_output.txt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9af7c97e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -294,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Aug 30 2022, 04:58:14) [Clang 13.1.6 (clang-1316.0.21.2.5)]"
   },
   "vscode": {
    "interpreter": {
